# aioCapsolver

./: CapSolver.py  README.md  capsolver.py  error_codes.json  pyproject.toml  requirements.txt  setup.py
aiocapsolver/: capsolver.py  captcha_error.py
aiocapsolver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pycapsolver.egg-info/: PKG-INFO  SOURCES.txt
