[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pycapsolver"
version = "0.0.1"
authors = [
  { name="Eli Chandler", email="eli.chandler@gmail.com" },
]
description = "A wrapper for capsolver.com API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Eli-Chandler/CapSolverPython"
"Bug Tracker" = "https://github.com/Eli-Chandler/CapSolverPython/issues"